# binary_algorithms

./: .gitignore  Cargo.toml  README.md
labs/lab1/: Cargo.toml
labs/lab1/src/: cli.rs  lib.rs  main.rs
labs/lab1/tests/: base64_test.rs
labs/lab2/src/: bit_stream.rs  bit_stream_reader.rs  bit_stream_writer.rs  cli.rs  lib.rs
labs/lab2/tests/: bit_stream_test.rs
src/: base64.rs  base64_test.rs  cli.rs  main.rs
src/lab1/: base64_test.rs  cli.rs  mod.rs
src/lab1/resource/: input_file.txt
src/resource/: input_file.txt
